data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2122.wast
;; 3. **Mismatched `blocktype` within Loop**:    - **Test Description**: Use a `block` with an incorrect `blocktype` inside a loop causing mismatched stack operations that lead to infinite loops.    - **Constraint**: Verifying that the `blocktype` is correctly handled and does not mismatching with stack operations inside a loop.    - **Relation to Infinite Loops**: Mismatched `blocktype` can lead to improper stack behavior that never resolves correctly.

(assert_invalid
  (module
    (func $infinite-loop-block-mismatch
      (loop (result i32)
        (block (result i64)
          (br 1)
        )
        (i32.const 0)
        br 1
      )
    )
  )
  "type mismatch"
)